Version 0.18

    * Mime.py: Add get_type_by_contents()

Version 0.17

2008-10-30 Heinrich Wendel <h_wendel@cojobo.net>
    * Menu.py: Python <= 2.3 compatibility fix
    * DesktopEntry.py: Fix wrong indention

Version 0.16

2008-08-07 Heinrich Wendel <h_wendel@cojobo.net>
	* IconTheme.py: Add more directories to the pixmap path

2008-03-02 Heinrich Wendel <h_wendel@cojobo.net>
    * IniFile.py: Fix saving of relative filenames
    * IniFile.py, DesktopEntry.py: Fix __cmp__ method
	* IniFile.py, IconTheme.py: Better error handling

Version 0.15

2005-08-10 Heinrich Wendel <h_wendel@cojoob.net>
    * Menu.py: Add support for TryExec

2005-08-09 Heinrich Wendel <h_wendel@cojobo.net>
    * Menu.py: Unicode bug fixed!
    * IconTheme.py: small speedup

2005-08-04 Heinrich Wendel <h_wendel@cojobo.net>
    * Menu.py, IconTheme.py: Bugfixes...
    * MenuEditor.py: Make xml nice; add hide/unhide functions

Versinon 0.14

2005-06-02 Heinrich Wendel <h_wendel@cojobo.net>
    * Menu.py, MenuEditor.py: Bugfixes...

version 0.13

2005-06-01 Heinrich Wendel <h_wendel@cojobo.net>
    * Menu.py, MenuEditor.py: Bugfixes...
    * Config.py: Add root_mode

Version 0.12

2005-05-30 Heinrich Wendel <h_wendel@cojobo.net>
    * MenuEditor.py: New in this release, use to edit Menus thx to Travis
    Watkins <alleykat@gmail.com> and Matt Kynaston <mattkyn@gmail.com> for
    their help
    * Menu.py, IniFile.py, DesktopEntry.py: Lot of bugfixing...
    * BaseDirectory.py: Add xdg_cache_home
    * IconTheme.py, Config.py: More caching stuff, make cachetime
    configurable

Version 0.11

2005-05-23 Heinrich Wendel <h_wendel@cojobo.net>
    * DesktopEntry.p, Menu.py: A lot of bugfixes, thx to Travis Watkins
    <alleykat@gmail.com>

2005-05-02 Heinrich Wendel <h_wendel@cojobo.net>
    * Config.py:
    Module to configure Basic Settings, currently available:
    - Locale, IconTheme, IconSize, WindowManager
    * Locale.py:
    Internal Module to support Locales
    * Mime.py: